--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,16 +16,13 @@
 
 <section class="features">
     <div class="feature">
-        <div class="feature-icon">
-            <img src="{{ url_for('static', filename='images/teams-icon.png') }}" alt="Teams Icon">
-        </div>
+        <div class="feature-icon">        </div>
         <h2>Teams</h2>
         <p>Discover the history and performance of teams in various leagues.</p>
         <a href="{{ url_for('teams_page') }}" class="btn">Explore Teams</a>
     </div>
     <div class="feature">
         <div class="feature-icon">
-            <img src="{{ url_for('static', filename='images/fielding-icon.png') }}" alt="Fielding Icon">
         </div>
         <h2>Fielding</h2>
         <p>Dive into player fielding statistics and defensive records.</p>
@@ -33,7 +30,6 @@
     </div>
     <div class="feature">
         <div class="feature-icon">
-            <img src="{{ url_for('static', filename='images/pitching-icon.png') }}" alt="Pitching Icon">
         </div>
         <h2>Pitching</h2>
         <p>Analyze pitching records and discover the greatest pitchers in history.</p>
@@ -41,7 +37,6 @@
     </div>
     <div class="feature">
         <div class="feature-icon">
-            <img src="{{ url_for('static', filename='images/master-icon.png') }}" alt="Master Icon">
         </div>
         <h2>Master</h2>
         <p>Explore detailed player information from the Master dataset.</p>
@@ -49,7 +44,6 @@
     </div>
     <div class="feature">
         <div class="feature-icon">
-            <img src="{{ url_for('static', filename='images/master-icon.png') }}" alt="Master Icon">
         </div>
         <h2>Batting</h2>
         <p>Explore detailed player information from the Batting dataset.</p>
