--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -2,6 +2,16 @@
 {% block title %}
 Teams{% endblock %}
 {% block content %}
+<!-- Flash Messages -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <div>
+      {% for category, message in messages %}
+        <div class="alert alert-{{ category }}">{{ message }}</div>
+      {% endfor %}
+    </div>
+  {% endif %}
+{% endwith %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='teams.css') }}">
@@ -106,63 +116,59 @@ Teams{% endblock %}
             <button type="submit" class="btn btn-primary btn-block">Filter</button>
             <a href="{{ url_for('teams_page') }}" class="btn btn-secondary">Reset</a>
         </div>
-        <div>
-            <form method="get" action="/teams">
-                <input type="hidden" name="action" value="view_all" style="text-align: center; margin-top: 10px;">
-                <button type="submit" class="btn btn-primary btn-sm">View All</button>
-            </form>
-        </div>
     </div>
 </form>
 {% if teams %}
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Year</th>
-                <th>League</th>
-                <th>Team</th>
-                <th>Rank</th>
-                <th>Franchise</th>
-                <th>Division</th>
-                <th>GamesPlayed</th>
-                <th>Wins</th>
-                <th>Losses</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for team in teams %}
-            <tr>
-                <td>{{ team.Year }}</td>
-                <td>{{ team.League }}</td>
-                <td>{{ team.Team }}</td>
-                <td>{{ team.Rank }}</td>
-                <td>{{ team.Franchise }}</td>
-                <td>{{ team.TeamDivision }}</td>
-                <td>{{ team.GamesPlayed }}</td>
-                <td>{{ team.Wins }}</td>
-                <td>{{ team.Losses }}</td>
-                <td style="text-align: center; vertical-align: middle; white-space: nowrap;">
-                    <!-- Update Button -->
-                    <form action="{{ url_for('update_team_page', team_id=team.ID) }}" method="get" style="display:inline; border: none; margin: 0; padding: 0;">
-                        <button type="submit" class="btn btn-dark btn-sm" style="margin-right: 5px;">
-                            <i class="fas fa-edit"></i> Update
-                        </button>
-                    </form>
-                
-                    <!-- Delete Button -->
-                    <form method="POST" action="{{ url_for('delete_team', team_id=team.ID) }}" style="display:inline; border: none; margin: 0; padding: 0;">
-                        <button type="submit" class="btn btn-danger btn-sm">
-                            <i class="fas fa-trash-alt"></i> Delete
-                        </button>
-                    </form>
-                </td>
-                
-                
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <div class="scrollable-table">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Year</th>
+                    <th>League</th>
+                    <th>Team</th>
+                    <th>Rank</th>
+                    <th>Franchise</th>
+                    <th>Division</th>
+                    <th>GamesPlayed</th>
+                    <th>Wins</th>
+                    <th>Losses</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for team in teams %}
+                <tr>
+                    <td>{{ team.Year }}</td>
+                    <td>{{ team.League }}</td>
+                    <td>{{ team.Team }}</td>
+                    <td>{{ team.Rank }}</td>
+                    <td>{{ team.Franchise }}</td>
+                    <td>{{ team.TeamDivision }}</td>
+                    <td>{{ team.GamesPlayed }}</td>
+                    <td>{{ team.Wins }}</td>
+                    <td>{{ team.Losses }}</td>
+                    <td style="text-align: center; vertical-align: middle; white-space: nowrap;">
+                        <!-- Update Button -->
+                        <form action="{{ url_for('update_team_page', team_id=team.ID) }}" method="get" style="display:inline; border: none; margin: 0; padding: 0;">
+                            <button type="submit" class="btn btn-dark btn-sm" style="margin-right: 5px;">
+                                <i class="fas fa-edit"></i> Update
+                            </button>
+                        </form>
+                    
+                        <!-- Delete Button -->
+                        <form method="POST" action="{{ url_for('delete_team', team_id=team.ID) }}" style="display:inline; border: none; margin: 0; padding: 0;">
+                            <button type="submit" class="btn btn-danger btn-sm">
+                                <i class="fas fa-trash-alt"></i> Delete
+                            </button>
+                        </form>
+                    </td>
+                    
+                    
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% elif request.args.get('search') %}
     <p>No results found. Try searching for a different team name.</p>
 {% endif %}
@@ -238,16 +244,7 @@ Teams{% endblock %}
         </table>
     {% endif %}
 </div>
-<!-- Flash Messages -->
-{% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-    <div>
-      {% for category, message in messages %}
-        <div class="alert alert-{{ category }}">{{ message }}</div>
-      {% endfor %}
-    </div>
-  {% endif %}
-{% endwith %}
+
 
 {% endblock %}
 
