--- a/app/static/batting.css
+++ b/app/static/batting.css
@@ -310,7 +310,8 @@ h1, h2, h3 {
 
 .table-actions {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    gap: 25px;
     margin-bottom: 10px;
     padding-right: 10px;
 }
