--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -150,7 +150,7 @@ Teams{% endblock %}
                     <td style="text-align: center; vertical-align: middle; white-space: nowrap;">
                         <!-- Update Button -->
                         <form action="{{ url_for('update_team_page', team_id=team.ID) }}" method="get" style="display:inline; border: none; margin: 0; padding: 0;">
-                            <button type="submit" class="btn btn-dark btn-sm" style="margin-right: 5px;">
+                            <button type="submit" class="btn btn-dark btn-sm" style="margin-right: 5px; background-color: #002d62;">
                                 <i class="fas fa-edit"></i> Update
                             </button>
                         </form>
@@ -247,4 +247,3 @@ Teams{% endblock %}
 
 
 {% endblock %}
-
